# galFlowAI

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  BACKLOG_CODEX_ERROR_CATALOG.md  BACKLOG_REFINADO.md  CHECKPOINT_H10.md  CONTRIBUTING.md  ETAPA_H4A_H8.md  ETAPA_H4A_H8_COMPLETA.md  H10_PROGRESS.md  H11_PROGRESS.md  ORDEM_DE_USO.md  PROGRESSO_ATUAL.md  PROGRESSO_FINAL.md  README.md  RESUMO_FINAL.md  REVISAO_CRITICA.md  ROADMAP.md  STATUS_ATUAL.md  STATUS_FINAL.md  append_all_sections.py  append_backlog.py  changed_files.txt  check_syntax.py  compilar_e_testar.bat  download_gpt4all_auto.py  download_gpt4all_github.py  download_gpt4all_hf.py  download_gpt4all_mistral.py  download_gpt4all_model.py  download_gpt4all_monitor.py  example_video_generation.py  executar.bat  executar_background.bat  fix_all_syntax.py  fix_api_v2.py  fix_indentation.py  fix_missing_parens.py  (+39 more)
app/: api.py  api_backup.py  api_backup_full.py  api_commit_backup.py  config.py  config_models.py  exceptions.py  hardware.py  logging_config.py  main.py  main.py.bak  project_manager.py  safety.py
backup_20260501_215007/: main.py.bak  scene_splitter.py.bak  script_generator.py.bak
docs/: ACCEPTANCE_CRITERIA.md  ARQUITETURA.md  DECISIONS.md  FASTAPI_V2.md  GRADIO_STUDIO_UX.md  INSTALAR_GPT4ALL_K.md  INSTALAR_KOBOLDCPP_K.md  INSTALAR_LLAMACPP_K.md  INSTALAR_LM_STUDIO_K.md  LLM_LOCAL_SEM_API_KEY.md  MOTORES_ROTEIRO_TELA.md  PROMPT_ROTEIRO_V2.md  PROVIDERS_SETUP.md  QA_AUDITORIA_UNIFICADA.md  RELATORIO_ANALISE_AMBIENTE.md  ROADMAP.md  ROTEIROS_COM_FANTASIA.md  ROTEIRO_EDITAVEL.md  SCRIPT_EDITABLE.md  STACK.md  TROUBLESHOOTING.md  UI_UX_GAL_AI_STUDIO.md  VIDEO_PIPELINE.md  VIDEO_SERVICE.md
frontend/: index.html
knowledge_base/: 00_contexto_projeto.md  01_stack.md  (+3 more)
(+367 files in other folders)
